[project]
name = "nuclino-sync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-frontmatter>=1.1",
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.28",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
nuclino-sync = "sync:app"
